--- a/index.html
+++ b/index.html
@@ -2597,5 +2597,45 @@ document.addEventListener('DOMContentLoaded', function() {
     }, 2000);
 }); 
     </script>
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+    const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
+    const mobileMenuClose = document.querySelector('.mobile-menu-close');
+    const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+  
+    if (mobileMenuBtn) {
+      mobileMenuBtn.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.body.classList.add('mobile-menu-open');
+      });
+    }
+
+    function closeMobileMenu() {
+      document.body.classList.remove('mobile-menu-open');
+    }
+
+    if (mobileMenuClose) {
+      mobileMenuClose.addEventListener('click', closeMobileMenu);
+    }
+
+    if (mobileMenuOverlay) {
+      mobileMenuOverlay.addEventListener('click', closeMobileMenu);
+    }
+
+    const mobileMenuLinks = document.querySelectorAll('.mobile-nav-links a');
+    mobileMenuLinks.forEach(link => {
+      link.addEventListener('click', function() {
+        setTimeout(closeMobileMenu, 300);
+      });
+    });
+
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'Escape' && document.body.classList.contains('mobile-menu-open')) {
+        closeMobileMenu();
+      }
+    });
+});
+</script>
+
 </body>
 </html>
